
#ifndef SeverityLvl_enum_HPP
#define SeverityLvl_enum_HPP



enum class SeverityLvl_enum{

  CRITICAL,
  WARNING,
  INFO,
};




#endif