@startuml

' ============================================
' Core Logging Classes
' ============================================

class LogMessage {
    - appName: string
    - context: string
    - timeStamp: string
    - severity: Severity
    - text: string
    + LogMessage(appName: string, context: string, severity: Severity, text: string)
    + getAppName(): string
    + getContext(): string
    + getTimeStamp(): string
    + getSeverity(): Severity
    + getText(): string
}

enum Severity {
    DEBUG
    INFO
    WARNING
    ERROR
    CRITICAL
}

' ============================================
' Sink Interface and Implementations
' ============================================

interface ILogSink {
    + {abstract} write(message: LogMessage): void
    + {abstract} ~ILogSink()
}

class ConsoleSinkImpl {
    + write(message: LogMessage): void
}

class FileSinkImpl {
    - file: ofstream
    + FileSinkImpl(filePath: string)
    + write(message: LogMessage): void
}

class SocketSinkImpl {
    - socket: SafeSocket
    - socketPath: string
    - connected: bool
    + SocketSinkImpl(path: string)
    + write(message: LogMessage): void
    - ensureConnected(): bool
    - formatMessage(message: LogMessage): string
}

' ============================================
' Phase 4: Ring Buffer (Thread-Safe)
' ============================================

class "RingBuffer<T>" as RingBuffer {
    - buffer: vector<optional<T>>
    - head: size_t
    - tail: size_t
    - count: size_t
    - capacity: size_t
    - bufferMutex: mutex
    - notEmpty: condition_variable
    - notFull: condition_variable
    - shutdownFlag: atomic<bool>
    + RingBuffer(capacity: size_t)
    + tryPush(item: T&&): bool
    + tryPop(item: T&): bool
    + push(item: T&&): void
    + pop(item: T&): bool
    + shutdown(): void
    + isFull(): bool
    + isEmpty(): bool
    + size(): size_t
}

' ============================================
' Phase 4: Thread Pool
' ============================================

class ThreadPool {
    - workers: vector<thread>
    - tasks: queue<function<void()>>
    - queueMutex: mutex
    - condition: condition_variable
    - stopFlag: atomic<bool>
    + ThreadPool(numThreads: size_t)
    + ~ThreadPool()
    + enqueue(task: F&&): void
    + size(): size_t
    - workerLoop(): void
}

' ============================================
' Phase 4: Log Manager (Multi-threaded)
' ============================================

class LogManager {
    - buffer: RingBuffer<LogMessage>
    - sinks: vector<shared_ptr<ILogSink>>
    - consumerThread: thread
    - threadPool: ThreadPool
    - running: atomic<bool>
    - sinksMutex: mutex
    + LogManager(bufferSize: size_t, threadPoolSize: size_t)
    + ~LogManager()
    + addSink(sink: shared_ptr<ILogSink>): void
    + log(message: LogMessage): void
    + start(): void
    + stop(): void
    - consumerLoop(): void
}

' ============================================
' Builder Pattern
' ============================================

class LogManagerBuilder {
    - sinks: vector<shared_ptr<ILogSink>>
    - bufferSize: size_t
    - threadPoolSize: size_t
    + LogManagerBuilder()
    + setBufferSize(size: size_t): LogManagerBuilder&
    + setThreadPoolSize(size: size_t): LogManagerBuilder&
    + addSink(sink: shared_ptr<ILogSink>): LogManagerBuilder&
    + build(): unique_ptr<LogManager>
}

' ============================================
' Factory Pattern
' ============================================

enum LogSinkType_enum {
    Console
    File
    Socket
}

class LogSinkFactory {
    + {static} create(type: LogSinkType_enum, param: string): shared_ptr<ILogSink>
}

' ============================================
' Safe RAII Wrappers
' ============================================

class SafeFile {
    - fd: int
    - filepath: string
    + SafeFile(path: string, flags: int)
    + ~SafeFile()
    + SafeFile(SafeFile&&)
    + operator=(SafeFile&&): SafeFile&
    + isValid(): bool
    + getFd(): int
    + write(buffer: void*, count: size_t): ssize_t
    + read(buffer: void*, count: size_t): ssize_t
}

class SafeSocket {
    - sockfd: int
    - socketPath: string
    - isServerSocket: bool
    + SafeSocket()
    + ~SafeSocket()
    + SafeSocket(SafeSocket&&)
    + operator=(SafeSocket&&): SafeSocket&
    + createSocket(): bool
    + bind(path: string): bool
    + listen(backlog: int): bool
    + accept(): SafeSocket
    + connect(path: string): bool
    + read(buffer: void*, count: size_t): ssize_t
    + write(buffer: void*, count: size_t): ssize_t
    + isValid(): bool
    + getFd(): int
}

' ============================================
' Phase 3: Telemetry Source Interface
' ============================================

interface ITelemetrySource {
    + {abstract} openSource(): bool
    + {abstract} readSource(out: string&): bool
    + {abstract} ~ITelemetrySource()
}

class FileTelemetrySourceImpl {
    - file: SafeFile
    - filepath: string
    + FileTelemetrySourceImpl(path: string)
    + openSource(): bool
    + readSource(out: string&): bool
}

class SocketTelemetrySourceImpl {
    - serverSocket: SafeSocket
    - clientSocket: SafeSocket
    - socketPath: string
    + SocketTelemetrySourceImpl(socketPath: string)
    + openSource(): bool
    + readSource(out: string&): bool
}

' ============================================
' Phase 3: System Telemetry Writer
' ============================================

class SystemTelemetryWriter {
    - outputFile: SafeFile
    - outputPath: string
    + SystemTelemetryWriter(outputPath: string)
    + isOpen(): bool
    + writeCpuTelemetry(): bool
    + writeMemoryTelemetry(): bool
}

' ============================================
' Phase 3: Policy-Based Design
' ============================================

enum TelemetrySrc_enum {
    CPU
    RAM
    GPU
}

enum SeverityLvl_enum {
    CRITICAL
    WARNING
    INFO
}

class CpuPolicy <<policy>> {
    + {static} context: TelemetrySrc_enum = CPU
    + {static} unit: string_view = "%"
    + {static} WARNING: float = 75.0
    + {static} CRITICAL: float = 90.0
    + {static} inferSeverity(val: float): SeverityLvl_enum
}

class RamPolicy <<policy>> {
    + {static} context: TelemetrySrc_enum = RAM
    + {static} unit: string_view = "%"
    + {static} WARNING: float = 70.0
    + {static} CRITICAL: float = 85.0
    + {static} inferSeverity(val: float): SeverityLvl_enum
}

class GpuPolicy <<policy>> {
    + {static} context: TelemetrySrc_enum = GPU
    + {static} unit: string_view = "%"
    + {static} WARNING: float = 80.0
    + {static} CRITICAL: float = 95.0
    + {static} inferSeverity(val: float): SeverityLvl_enum
}

' ============================================
' Phase 3: Log Formatter
' ============================================

class "LogFormatter<Policy>" as LogFormatter {
    - msgDescription(val: float): string
    - telemetrySourceToString(src: TelemetrySrc_enum): string
    - convertToPhase1Severity(phase3_sev: SeverityLvl_enum): Severity
    + formatDataToLogMsg(raw: string): optional<LogMessage>
}

' ============================================
' Phase 4: Telemetry Reader (Multi-threaded)
' ============================================

class "TelemetryReader<Policy>" as TelemetryReader {
    - source: ITelemetrySource&
    - logManager: LogManager&
    - formatter: LogFormatter<Policy>
    - readerThread: thread
    - running: atomic<bool>
    - readInterval: milliseconds
    + TelemetryReader(source: ITelemetrySource&, logManager: LogManager&, interval: milliseconds)
    + ~TelemetryReader()
    + start(): void
    + stop(): void
    + isRunning(): bool
    - readLoop(): void
}

' ============================================
' Relationships
' ============================================

' Severity enum used by LogMessage
LogMessage --> Severity

' Sink implementations
ILogSink <|.. ConsoleSinkImpl
ILogSink <|.. FileSinkImpl
ILogSink <|.. SocketSinkImpl

' FileSinkImpl uses SafeFile (composition - though it uses ofstream currently)
SocketSinkImpl *-- SafeSocket

' LogManager composition
LogManager *-- "1" RingBuffer : contains
LogManager *-- "1" ThreadPool : contains
LogManager o-- "*" ILogSink : manages

' LogManagerBuilder creates LogManager
LogManagerBuilder ..> LogManager : <<creates>>

' LogSinkFactory creates sinks
LogSinkFactory ..> ILogSink : <<creates>>
LogSinkFactory --> LogSinkType_enum

' Telemetry source implementations
ITelemetrySource <|.. FileTelemetrySourceImpl
ITelemetrySource <|.. SocketTelemetrySourceImpl

FileTelemetrySourceImpl *-- SafeFile
SocketTelemetrySourceImpl *-- "2" SafeSocket

' SystemTelemetryWriter
SystemTelemetryWriter *-- SafeFile

' Policy relationships
LogFormatter --> TelemetrySrc_enum
LogFormatter --> SeverityLvl_enum
LogFormatter --> Severity

CpuPolicy --> TelemetrySrc_enum
CpuPolicy --> SeverityLvl_enum
RamPolicy --> TelemetrySrc_enum
RamPolicy --> SeverityLvl_enum
GpuPolicy --> TelemetrySrc_enum
GpuPolicy --> SeverityLvl_enum

' Phase 4: TelemetryReader relationships
TelemetryReader *-- LogFormatter : contains
TelemetryReader --> ITelemetrySource : uses
TelemetryReader --> LogManager : uses

' Notes
note right of RingBuffer
  **Phase 4: Thread-Safe**
  - Uses mutex & condition_variable
  - Supports blocking push/pop
  - Graceful shutdown mechanism
end note

note right of ThreadPool
  **Phase 4: Worker Pool**
  - Manages worker threads
  - Task queue with synchronization
  - Used for parallel sink writing
end note

note right of LogManager
  **Phase 4: Async Logging**
  - Consumer thread processes buffer
  - ThreadPool writes to sinks in parallel
  - Non-blocking log() method
end note

note right of TelemetryReader
  **Phase 4: Continuous Reading**
  - Background thread reads telemetry
  - Uses Policy for formatting
  - Configurable read interval
end note

note bottom of CpuPolicy
  Policy classes provide:
  - Context (CPU/RAM/GPU)
  - Unit ("%")
  - Thresholds (WARNING/CRITICAL)
  - Severity inference logic
end note

@enduml